--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <hr>
     <h3>Click to know The Best Movies According to Me </h3>
 
-    <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</a>
+    <a href="./public/movie-ranking.html">Movie Ranking Project</a>
 <hr>
 
 <a href="./public/birthday-invite.html">Birthdat Invite Project</a>
